--- a/3-этап/usestateapp/package.json
+++ b/3-этап/usestateapp/package.json
@@ -9,7 +9,12 @@
     "antd": "^5.20.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
